--- a/main.lfm
+++ b/main.lfm
@@ -1,8 +1,36 @@
-object Form1: TForm1
+object frmMain: TfrmMain
   Left = 353
   Height = 696
   Top = 32
   Width = 958
-  Caption = 'Form1'
+  Caption = 'Computer simulaties'
+  ClientHeight = 696
+  ClientWidth = 958
   DesignTimePPI = 120
+  Menu = Hoofdminu
+  object pbMain: TPaintBox
+    Left = 32
+    Height = 600
+    Top = 40
+    Width = 600
+    Color = clBlack
+    ParentColor = False
+  end
+  object Hoofdminu: TMainMenu
+    Left = 59
+    Top = 43
+    object mniHoofdstukken: TMenuItem
+      Caption = 'Hoofdstukken'
+      object mniHoofdstuk1: TMenuItem
+        Caption = 'Hoofdstuk 1'
+        object mniPythkleed: TMenuItem
+          Caption = 'Pythagoraskleed'
+          OnClick = mniPythkleedClick
+        end
+      end
+      object mniHoofdstuk2: TMenuItem
+        Caption = 'Hoofdstuk 2'
+      end
+    end
+  end
 end
