Programma Potveld2, 3 en 4 toegevoegd
Potveld2, Potveld3 en Potveld4 Toegevoegd. Procedure Cirkel toegevoegd.

--- a/main.lfm
+++ b/main.lfm
@@ -88,8 +88,8 @@ object frmMain: TfrmMain
     end
   end
   object Hoofdminu: TMainMenu
-    Left = 488
-    Top = 520
+    Left = 848
+    Top = 24
     object mniHoofdstukken: TMenuItem
       Caption = 'Hoofdstukken'
       object mniHoofdstuk1: TMenuItem
@@ -205,6 +205,18 @@ object frmMain: TfrmMain
         object mniPotveld1: TMenuItem
           Caption = 'Potentiaallijnen en stroomlijnen van een puntbron'
           OnClick = mniPotveld1Click
+        end
+        object mniPotveld2: TMenuItem
+          Caption = 'Potentiaallijnen en stroomlijnen van put en bron'
+          OnClick = mniPotveld2Click
+        end
+        object mniPotveld3: TMenuItem
+          Caption = 'Potentiaallijnen van twee gelijke puntbronnen'
+          OnClick = mniPotveld3Click
+        end
+        object mniPotveld4: TMenuItem
+          Caption = 'Potentiaallijnen van een regelmatige m-hoek'
+          OnClick = mniPotveld4Click
         end
       end
     end
